feat: adding swagger to institution, post, and funding collection
