# institution-service/routes/fund_collect_routes.go
@@ -3,8 +3,9 @@ package routes
 import (
 	"net/http"
 
-	"github.com/labstack/echo/v4"
 	pb "institution-service/pb/fund_collect"
+
+	"github.com/labstack/echo/v4"
 )
 
 type FundCollectHTTPHandler struct {
@@ -18,11 +19,24 @@ func NewFundCollectHTTPHandler(fundCollectClient pb.FundCollectServiceClient) *F
 }
 
 func (h *FundCollectHTTPHandler) Routes(e *echo.Echo) {
-	groupFundCollect := e.Group("/fund-collect")
+	groupFundCollect := e.Group("/v1/fund-collect")
 	groupFundCollect.Use(AuthMiddleware)
 	groupFundCollect.GET("/post/:id", h.GetFundCollectByPostID)
 }
 
+// GetFundCollectByPostID godoc
+// @Summary      Get funding collection by Post ID.
+// @Description  Get a specific funding collection by Post ID with authorization.
+// @Tags         FundCollect
+// @Accept       json
+// @Produce      json
+// @Security     BearerAuth
+// @Param        Authorization  header    string  true  "Bearer token"
+// @Param        id            path      string    true  "Institution ID"
+// @Success      200  {object}  model.FundCollectResponse "Success get funding collection data"
+// @Failure      401  {object}  httputil.HTTPError "Unauthorized"
+// @Failure      404  {object}  httputil.HTTPError "Funding collection not found"
+// @Router       /v1/fund-collect/{id} [get]
 func (h *FundCollectHTTPHandler) GetFundCollectByPostID(c echo.Context) error {
 	req := new(pb.GetFundCollectByPostIDRequest)
 	req.PostId = c.Param("id")
@@ -34,5 +48,8 @@ func (h *FundCollectHTTPHandler) GetFundCollectByPostID(c echo.Context) error {
 		})
 	}
 
-	return c.JSON(http.StatusOK, res)
+	return c.JSON(http.StatusOK, map[string]interface{}{
+		"message": "Success get fund collection data",
+		"data":    res,
+	})
 }
